2013-12-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/multi.pm: Get current slot from
	  current_slot_csc.
	* server-src/driver.c: Correctly parse PARTDONE message.

2013-12-20  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Fix for CURLE_SSL_CACERT_BADFILE.

2013-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Run sw_vers to find Mac platform.

2013-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Change state if now loaded.
	* server-src/amtape.pl (inventory): Print empty slot.

2013-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ambsdtar.c: Some fixes.

2013-12-16  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/Makefile.am: Add ambsdtar.
	* application-src/ambsdtar.c: New application script for BSD tar
	* application-src/amgtar.c: Call dbclose()
	* application-src/amstar.c: Call dbclose()
	* client-src/calcsize.c: Handle BSDTAR
	* config/amanda/dumpers.m4 (AMANDA_PROG_BSDTAR): function to find
	  bsdtar binary.
	* configure.in: Call AMANDA_PROG_BSDTAR
	* man/Makefile.am: Add ambsdtar.8
	* man/entities/global.entities.in: Add bsdtar.
	* man/xml-source/ambsdtar.8.xml: New ambsdtar man page
	* perl/Amanda/Constants.pm.in: Add $BSDTAR
	* NEWS, ReleaseNotes: Add ambsdtar

2013-12-16  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c (backup_support_option): Do pass pass the
	  --config, --host, --disk and --device
	* client-src/client_util.h (backup_support_option): Change prototype.
	* client-src/selfcheck.c, client-src/sendbackup.c,
	  client-src/sendsize.c,  recover-src/extract_list.c: Use new
	  backup_support_option arguments.

2013-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Fix if header have only one
	  application property.

2013-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Fix read from applicaiton stderr.
