@@ -1,4 +1,9 @@
 2013-12-20  Jean-Louis Martineau <martineau@zmanda.com>
+	* application-src/ambsdtar.c: Add a trainling '/' on directory entry
+	  in the index.
+	* man/xml-source/ambsdtar.8.xml: Say that restore never remove files.
+
+2013-12-20  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Changer/multi.pm: Get current slot from
 	  current_slot_csc.
 	* server-src/driver.c: Correctly parse PARTDONE message.
